fix incorrect reference to the content provider